fix: padding to align to text

--- a/src/app/shared/article/article.component.css
+++ b/src/app/shared/article/article.component.css
@@ -37,7 +37,7 @@
 	margin-right: 0.5rem;
 	width: 1.5rem;
 	flex-shrink: 0;
-	padding-top: 1.5rem;
+	padding-top: 1rem;
 	justify-self: flex-end;
 }
 
